--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
             sizes="32x32"
             href="./assets/favicon-32x32.png"
         />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Chivo:ital,wght@0,100..900;1,100..900&display=swap"
+            rel="stylesheet"
+        />
+
+        <link rel="stylesheet" href="./styles.css" />
         <title>Frontend Mentor | Pod request access landing page</title>
     </head>
     <body></body>
