--- a/index.html
+++ b/index.html
@@ -15,9 +15,52 @@
             href="https://fonts.googleapis.com/css2?family=Chivo:ital,wght@0,100..900;1,100..900&display=swap"
             rel="stylesheet"
         />
-
         <link rel="stylesheet" href="./styles.css" />
         <title>Frontend Mentor | Pod request access landing page</title>
     </head>
-    <body></body>
+    <body>
+        <main>
+            <img src="./assets/desktop/logo.svg" alt="" />
+            <div class="main-content">
+                <h1>PUBLISH YOUR PODCASTS <span>EVERYWHERE</span></h1>
+                <p>
+                    Upload your audio to Pod with a single click. We’ll then
+                    distribute your podcast to Spotify, Apple Podcasts, Google
+                    Podcasts, Pocket Casts and more!
+                </p>
+                <div class="brand-container">
+                    <img
+                        class="brand-logo"
+                        src="./assets/desktop/spotify.svg"
+                        alt=""
+                    />
+                    <img
+                        class="brand-logo"
+                        src="./assets/desktop/apple-podcast.svg"
+                        alt=""
+                    />
+                    <img
+                        class="brand-logo"
+                        src="./assets/desktop/google-podcasts.svg"
+                        alt=""
+                    />
+                    <img
+                        class="brand-logo"
+                        src="./assets/desktop/pocket-casts.svg"
+                        alt=""
+                    />
+                </div>
+                <form action="" method="post">
+                    <input
+                        type="email"
+                        aria-labelledby="email"
+                        name="email"
+                        id="email"
+                        placeholder="Email address"
+                    />
+                    <button type="submit">Request Access</button>
+                </form>
+            </div>
+        </main>
+    </body>
 </html>
