--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </head>
     <body>
         <main>
-            <img src="./assets/desktop/logo.svg" alt="" />
+            <img class="main-logo" src="./assets/desktop/logo.svg" alt="" />
             <div class="main-content">
                 <h1>PUBLISH YOUR PODCASTS <span>EVERYWHERE</span></h1>
                 <p>
