--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
                 alt=""
             />
             <img
+                class="img-desktop"
+                src="./assets/desktop/image-host.jpg"
+                alt=""
+            />
+            <img
                 class="img-pattern"
                 src="./assets/desktop/bg-pattern-dots.svg"
                 alt=""
